# VulkanLearn

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Application.cpp.699F04DD41C24FD7.idx  Application.hpp.2ACF706745170270.idx  ErrorCode.hpp.DF4684556DF7D4AF.idx  Log.cpp.E4035782BB10929A.idx  Log.hpp.4750FD46E4F60FC4.idx  Utils.cpp.0D41650D6CFFBA86.idx  Utils.h.2B690527AC93A9DC.idx  Utils.hpp.815C63001923AE54.idx  VulkanInstance.cpp.1B15AB2CE937E9CF.idx  VulkanInstance.hpp.EDE1E2E9851121AB.idx  main.cpp.C945F6AE263EF551.idx
scripts/: build.sh
shader/: shader.frag  shader.vert  vert.spv
src/: Application.cpp  Application.hpp  CMakeLists.txt  ErrorCode.hpp  Log.hpp  Utils.cpp  Utils.h  Utils.hpp  Vertext.hpp  VulkanInstance.cpp  VulkanInstance.hpp  main.cpp
